# rusty-player

./: .gitignore  Cargo.toml  Dockerfile  README.md  TEMPO_PITCH_DSP_REFERENCE.md  build.rs  nginx.conf
docs/dependencies/: rustfft.md  serde-wasm-bindgen.md  symphonia.md  wasm-bindgen.md
docs/project/: player.md  source.md
docs/science/: 01-phase-vocoder.md  02-fast-fourier-transform.md  03-overlap-add-synthesis.md  04-instantaneous-frequency-and-phase-accumulation.md  05-windowing-functions.md  06-sample-rate-conversion-and-resampling.md  07-ring-buffers.md  08-mid-side-stereo-processing.md  09-interleaved-audio-and-channel-layout.md  10-musical-pitch-and-frequency.md  11-parameter-smoothing.md  12-gain-loudness-and-decibels.md  13-mp3-decoding-and-gapless-playback.md  14-spectral-analysis-magnitude-and-phase.md  15-linear-interpolation.md  16-streaming-real-time-audio-processing.md  17-web-audio-api-integration.md  18-linked-phase-stereo-processing.md  19-transient-handling-in-time-stretching.md  20-spectral-leakage-and-frequency-resolution.md
src/: analysis.rs  decoder.rs  lib.rs  processor.rs  resampler.rs  vocoder.rs
www/: app.js  index.html  style.css  worklet.js
www/AutoDJ/: app.js  index.html  style.css
www/RtTempoPitchQA/: app.js  index.html  style.css
www/config/: player-defaults.json
