[package]
name = "rusty-player"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
symphonia = { version = "0.5", default-features = false, features = ["mp3", "pcm", "isomp4"] }
rustfft = "6"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[build-dependencies]
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
